--- a/src/styles/sass/_Profil.scss
+++ b/src/styles/sass/_Profil.scss
@@ -2,7 +2,6 @@
 
 @media(max-width: 768px) {
     .profil_container {
-        
         &_update {
             flex-direction: column;
             align-items: center;
@@ -10,8 +9,7 @@
             &_photobox {
                 width: 95% !important;
                 &_photo {
-                    height: 15rem !important;
-                    border-radius: 10rem !important;
+                    margin-bottom: 20px;
                 }
             }
 
@@ -37,11 +35,16 @@
     }
 
     .separateBox {
-        margin-top: 60px !important;
+        margin-top: 40px !important;
         border-top: 1px solid rgba(65, 65, 65, 0.3);
         width: 100%;
         z-index: 3;
     }
+
+#file {
+    margin: 10px auto 0px auto !important;
+}
+
 }
 
 // Update photo/infos
@@ -125,6 +128,13 @@
         }
     }
 
+.update-photo-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    flex: 2;
+}
 
 .update_infos_input {
     margin-bottom: 10px;
@@ -137,7 +147,7 @@
 }
 
 #file {
-    margin-top: 25px;
+    margin-bottom: -70px;
 }
 
 .btn_update_profil {
