--- a/src/styles/sass/_Profil.scss
+++ b/src/styles/sass/_Profil.scss
@@ -41,9 +41,9 @@
         z-index: 3;
     }
 
-#file {
-    margin: 10px auto 0px auto !important;
-}
+    #file_profil {
+        margin: 10px auto 0px auto !important;
+    }
 
 }
 
