--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -369,6 +369,139 @@ nav {
   margin-left: 5px;
 }
 
+#newpost_form {
+  display: flex;
+  flex-direction: column;
+}
+
+.trending_container {
+  width: 60%;
+  min-width: 300px;
+  max-width: 600px;
+  margin: auto;
+  margin-top: 100px;
+}
+.trending_container_newpost {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem !important;
+}
+.trending_container_newpost_header {
+  display: flex;
+  align-items: center;
+}
+.trending_container_newpost_photobox {
+  margin-right: 1rem;
+}
+.trending_container_newpost_photo {
+  width: 75px;
+  height: 75px;
+  border: 1px solid rgba(65, 65, 65, 0.3);
+  border-radius: 3rem;
+  object-fit: cover;
+}
+.trending_container_newpost_form {
+  width: 100%;
+}
+.trending_container_newpost_form_input {
+  height: 1.8rem;
+  margin-bottom: 5px;
+  color: #000000;
+  border: 1px solid rgb(80, 79, 79);
+  border-radius: 0.3rem;
+  font-size: 16px;
+  background: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(30px);
+}
+.trending_container_newpost_form_input:hover {
+  filter: brightness(1.2);
+}
+.trending_container_newpost_form_input:focus {
+  outline: solid #1e6e7d;
+  border-color: #1e6e7d;
+}
+.trending_container_post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1.5rem !important;
+  padding: 0 !important;
+}
+.trending_container_post_poster {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(65, 65, 65, 0.3);
+  width: 90%;
+  padding: 1rem;
+}
+.trending_container_post_poster_photo {
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid rgba(65, 65, 65, 0.3);
+  border-radius: 2rem;
+  object-fit: cover;
+}
+.trending_container_post_poster_infos {
+  margin-left: 10px;
+}
+.trending_container_post_poster_infos_name {
+  margin-top: 0;
+  margin-bottom: 6px;
+  font-size: 18px;
+}
+.trending_container_post_poster_infos_date {
+  margin-top: 6px;
+  margin-bottom: 0;
+  font-size: 12px;
+  opacity: 0.7;
+}
+.trending_container_post_content {
+  width: 95%;
+}
+.trending_container_post_content_message {
+  width: 90%;
+  margin-bottom: 0;
+}
+.trending_container_post_btn {
+  background-color: transparent;
+  border-top-color: rgba(65, 65, 65, 0.3);
+  border-bottom-color: transparent;
+  height: 2.5rem;
+  color: #1e6e7d;
+  font-size: 20px;
+}
+.trending_container_post_btn_container {
+  width: 100%;
+}
+.trending_container_post_btn_like {
+  border-radius: 0 0 0 0.8rem;
+  border-left-color: transparent;
+  border-right-color: rgba(65, 65, 65, 0.3);
+}
+.trending_container_post_btn_comment {
+  border-radius: 0 0 0.8rem 0;
+  border-right-color: transparent;
+  border-left-color: rgba(65, 65, 65, 0.3);
+}
+
+#file_newpost {
+  margin-top: 0;
+}
+
+.btn_newpost {
+  width: 100%;
+  height: 1.8rem;
+  margin-top: 0.8rem;
+}
+.btn_newpost_disabled {
+  opacity: 0.5;
+}
+.btn_newpost_disabled:hover {
+  transform: none;
+  box-shadow: none;
+  cursor: auto;
+}
+
 @font-face {
   font-family: "Lato";
   src: url("fonts/Lato-Regular.ttf");
