--- a/src/styles/sass/_Trending.scss
+++ b/src/styles/sass/_Trending.scss
@@ -94,9 +94,8 @@
         &_poster {
             display: flex;
             align-items: center;
-            
             width: 90%;
-            padding: 1rem;
+            padding: 0.5rem 1rem;
 
             &_photo {
                 width: 3rem;
