--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -312,7 +312,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: 900;
+  z-index: 9000;
 }
 .modal_container {
   background-color: rgb(249, 249, 249);
@@ -369,6 +369,18 @@ nav {
   margin-left: 5px;
 }
 
+.modal_container_post {
+  position: fixed;
+  width: 500px !important;
+  top: 35%;
+  z-index: 10000;
+}
+
+@media (max-width: 768px) {
+  .trending_container {
+    width: 90% !important;
+  }
+}
 #newpost_form {
   display: flex;
   flex-direction: column;
@@ -480,7 +492,7 @@ nav {
 }
 .trending_container_post_content_message {
   width: 90%;
-  margin: 18px 10px 0px 20px;
+  margin: 18px 10px 18px 20px;
 }
 .trending_container_post_content_image {
   display: flex;
@@ -488,7 +500,7 @@ nav {
   width: 95%;
   max-height: 400px;
   object-fit: cover;
-  margin: 20px auto !important;
+  margin: 0px auto 20px auto !important;
 }
 .trending_container_post_btn {
   background-color: transparent;
