--- a/src/styles/sass/_ConfirmModal.scss
+++ b/src/styles/sass/_ConfirmModal.scss
@@ -6,7 +6,7 @@
         left: 0;
         width: 100%;
         height: 100vh;
-        z-index: 900;
+        z-index: 9000;
     }
 
     &_container {
@@ -69,4 +69,11 @@
     &_confirm {
         margin-left: 5px;
     }
+}
+
+.modal_container_post {
+    position: fixed;
+    width: 500px !important;
+    top: 35%;
+    z-index: 10000;
 }
