--- a/src/styles/sass/_Trending.scss
+++ b/src/styles/sass/_Trending.scss
@@ -1,5 +1,11 @@
 @import 'variables';
 
+@media(max-width: 768px) {
+    .trending_container {
+        width: 90% !important;
+    }
+}
+
 #newpost_form {
     display: flex;
     flex-direction: column;
@@ -72,6 +78,7 @@
         &_icons {
             position: absolute;
             right: 1rem;
+            
             &_icon {
                 font-size: 15px;
                 color: rgba(53, 53, 53, 0.7);
@@ -129,7 +136,7 @@
 
             &_message {
                 width: 90%;
-                margin: 18px 10px 0px 20px;
+                margin: 18px 10px 18px 20px;
             }
 
             &_image {
@@ -138,7 +145,7 @@
                 width: 95%;
                 max-height: 400px;
                 object-fit: cover;
-                margin: 20px auto !important;
+                margin: 0px auto 20px auto !important;
             }
         }
 
