--- a/src/styles/sass/_Trending.scss
+++ b/src/styles/sass/_Trending.scss
@@ -163,15 +163,10 @@
             }
             
             &_like {
+                width: 100%;
                 border-radius: 0 0 0 0.8rem;
-                border-left-color: transparent;
-                border-right-color: rgba(65, 65, 65, 0.3);
-            }
-
-            &_comment {
-                border-radius: 0 0 0.8rem 0;
-                border-right-color: transparent;
-                border-left-color: rgba(65, 65, 65, 0.3);
+                border-color: transparent;
+                border-top-color: rgba(65, 65, 65, 0.3);
             }
         }
     }
