--- a/src/styles/sass/_Trending.scss
+++ b/src/styles/sass/_Trending.scss
@@ -110,6 +110,7 @@
                 border: 1px solid rgba(65, 65, 65, 0.3);
                 border-radius: 2rem;
                 object-fit: cover;
+                margin-right: 0.5rem;
             }
 
             &_infos {
@@ -196,4 +197,12 @@
     display: flex;
     flex-direction: column-reverse;
     margin-bottom: 40px;
+    padding: 0 !important;
+}
+
+.nopost_container {
+    width: 90%;
+    &_text {
+        text-align: center;
+    }
 }
