--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -370,10 +370,10 @@ nav {
 }
 
 .modal_container_post {
-  position: fixed;
+  position: absolute;
   width: 500px !important;
-  top: 35%;
-  z-index: 10000;
+  top: 30%;
+  margin-bottom: 0 !important;
 }
 
 @media (max-width: 768px) {
