--- a/src/styles/sass/_Trending.scss
+++ b/src/styles/sass/_Trending.scss
@@ -23,8 +23,8 @@
         display: flex;
         flex-direction: column;
         padding: 1rem !important;
-        border: 1px solid rgba(65, 65, 65, 0.3);
         background-color: rgba(255, 255, 255, 0.6) !important;
+        @include border;
         
         &_header {
             display: flex;
@@ -38,30 +38,16 @@
         &_photo {
             width: 75px;
             height: 75px;
-            border: 1px solid rgba(65, 65, 65, 0.3);
             border-radius: 3rem;
             object-fit: cover;
+            @include border;
         }
         
         &_form {
             width: 100%;
             
             &_input {
-                height: 1.8rem;
-                margin-bottom: 5px;
-                color: $text-clr;
-                border: 1px solid rgb(80, 79, 79);
-                border-radius: 0.3rem;
-                font-size: 16px;
-                background: rgba(255, 255, 255, 0);
-                backdrop-filter: blur(30px);
-                &:hover {
-                    filter: brightness(1.2);
-                }
-                &:focus {
-                    outline: solid $primary-clr;
-                    border-color: $primary-clr;
-                }
+                margin-bottom: 5px; 
             }
         }
     }
@@ -72,8 +58,7 @@
         flex-direction: column;
         margin: 1.5rem 0 0 0 !important;
         padding: 0 !important;
-        border: 1px solid rgba(65, 65, 65, 0.3);
-        background-color: rgba(255, 255, 255, 0.7) !important;
+        @include border;
 
         &_icons {
             position: absolute;
@@ -107,15 +92,13 @@
             &_photo {
                 width: 3rem;
                 height: 3rem;
-                border: 1px solid rgba(65, 65, 65, 0.3);
                 border-radius: 2rem;
                 object-fit: cover;
                 margin-right: 0.5rem;
+                @include border;
             }
 
             &_infos {
-                margin-left: 10px;
-
                 &_name {
                     margin-top: 0;
                     margin-bottom: 6px;
@@ -132,7 +115,7 @@
         }
         
         &_content {
-            border-top: 1px solid rgba(65, 65, 65, 0.3);
+            @include border-top;
             width: 100%;
 
             &_message {
@@ -152,7 +135,7 @@
 
         &_btn {
             background-color: transparent;
-            border-top-color: rgba(65, 65, 65, 0.3);
+            border-top-color: $border-clr;
             border-bottom-color: transparent;
             height: 2.5rem;
             color: $primary-clr;
@@ -167,7 +150,7 @@
                 width: 100%;
                 border-radius: 0 0 0 0.8rem;
                 border-color: transparent;
-                border-top-color: rgba(65, 65, 65, 0.3);
+                border-top-color: $border-clr;
             }
         }
     }
@@ -183,7 +166,7 @@
     margin-top: 0.8rem;
 
     &_disabled {
-        opacity: 0.5;
+        opacity: 1;
         &:hover {
             transform: none;
             box-shadow: none;
