--- a/src/styles/sass/_ConfirmModal.scss
+++ b/src/styles/sass/_ConfirmModal.scss
@@ -7,7 +7,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         z-index: 9000;
     }
 
@@ -17,7 +17,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: 900;
+        z-index: 9000;
         width: 45%;
         min-width: 330px;
         max-width: 400px;
@@ -77,6 +77,6 @@
 .modal_container_post {
     position: absolute;
     width: 500px !important;
-    top: 30%;
+    top: 100%;
     margin-bottom: 0 !important;
 }
