--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -86,6 +86,11 @@ a {
     padding: 1.5rem;
 }
 
+.text_center {
+    text-align: center;
+    margin-top: 5px;
+}
+
 
 // SUCCESS / ERROR \\
 .success {
@@ -97,10 +102,6 @@ a {
     color: $error-clr;
     margin-top: -5px;
     margin-bottom: 10px;
-    &_center {
-        text-align: center;
-        margin-top: 5px;
-    }
 } 
 
 
