--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -547,14 +547,9 @@ nav {
   padding: 0 !important;
 }
 
-.nopost_container {
-  width: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nopost_container_text {
-  margin: 10px 0 !important;
+.unknow_user {
+  margin-top: 5px;
+  font-style: italic;
 }
 
 @font-face {
