--- a/src/styles/sass/_Profil.scss
+++ b/src/styles/sass/_Profil.scss
@@ -2,6 +2,7 @@
 
 @media(max-width: 768px) {
     .profil_container {
+        width: 98% !important;
         &_update {
             flex-direction: column;
             align-items: center;
